@@ -1,6 +1,8 @@
-2023-02-13 Jan Kotanski <jankotan@gmail.com>
+2023-02-14 Jan Kotanski <jankotan@gmail.com>
 	* set the signal from the FIO signalcounter parameter in nxsfileinfo attachment (#447)
 	* fix setting the creationTime in FIO nxsfileinfo attachment (#447)
+	* set the signal from the SignalCounter sardana variable in nxsfileinfo attachment (#449)
+	* set the axes from the sardana scancommand first parameter in nxsfileinfo attachment (#449)
 	* tagged as v3.41.0
 
 2023-02-07 Jan Kotanski <jankotan@gmail.com>
